--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -1,3 +1,54 @@
 .team {
     background: url('../img/bg/team_bg.jpg') center center / cover no-repeat;
 }
+
+.team.section {
+    position: relative;
+}
+
+.team__desc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.team__block {
+    width: 50%;
+    height: 100%;
+    background-color: rgba(31, 33, 34, .7);
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.team__desc {
+    display: flex;
+}
+
+.team__item-name {
+    font-family: Gagalin-Regular, sans-serif;
+    font-size: 14px;
+    color: $yellow;
+}
+
+.team__item-block {
+    color: white;
+    display: flex;
+}
+
+.team__item-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    background-position: left;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.team__ava {
+    // background-position: center;
+    // background-size: cover;
+    background-repeat: no-repeat;
+}
