--- a/css/main.css
+++ b/css/main.css
@@ -583,6 +583,60 @@ footer {
 .team {
   background: url("../img/bg/team_bg.jpg") center center/cover no-repeat; }
 
+.team.section {
+  position: relative; }
+
+.team__desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.team__block {
+  width: 50%;
+  height: 100%;
+  background-color: rgba(31, 33, 34, 0.7);
+  position: absolute;
+  right: 0;
+  top: 0; }
+
+.team__desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.team__item-name {
+  font-family: Gagalin-Regular, sans-serif;
+  font-size: 14px;
+  color: #f9b43b; }
+
+.team__item-block {
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.team__item-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-position: left;
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.team__ava {
+  background-repeat: no-repeat; }
+
 .reviews {
   background: #2f3234; }
 
