--- a/css/blocks/button.scss
+++ b/css/blocks/button.scss
@@ -1,4 +1,5 @@
 .btn {
+    font-family: Ubuntu-B, sans-serif;
     border-radius: 5px;
     padding: 10px 15px;
     color: #fff;
@@ -6,6 +7,7 @@
     text-transform: uppercase;
     background: $black;
     font-size: 13px;
+    transition: .7s;
     &:hover {
         background: $black_deep;
     }
@@ -13,6 +15,9 @@
 
 .btn--red {
     background: $red;
+    &:hover {
+        background: $hover;
+    }
 }
 
 .button__reset {
