--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@ $yellow: #f9b43b;
 $black: #2f3234;
 $black_deep:#1f2122;
 $red: #e35028;
+$hover:#c1401e;
 // Normalize
 @import "_misk/normalize.scss";
 // Setups
@@ -19,6 +20,8 @@ $red: #e35028;
 @import "blocks/best";
 @import "blocks/menu";
 @import "blocks/burgers";
+@import "blocks/structure";
+@import "blocks/cal.scss";
 @import "blocks/team";
 @import "blocks/reviews";
 @import "blocks/work";
