--- a/css/blocks/button.scss
+++ b/css/blocks/button.scss
@@ -1,13 +1,14 @@
 .btn {
     font-family: Ubuntu-B, sans-serif;
-    border-radius: 5px;
-    padding: 10px 15px;
+    border-radius: rem(5px);
+    padding: rem(10px) rem(15px);
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
     background: $black;
-    font-size: 13px;
+    font-size: rem(13px);
     transition: .7s;
+    cursor: pointer;
     &:hover {
         background: $black_deep;
     }
