--- a/css/_misk/layout.scss
+++ b/css/_misk/layout.scss
@@ -1,3 +1,13 @@
+html {
+    font-size: 16px;
+    @include tablets {
+        font-size: 14px;
+    }
+    @include phones {
+        font-size: 13px;
+    }
+}
+
 html,
 body {
     height: 100%;
@@ -6,7 +16,7 @@ body {
 body {
     font-family: Ubuntu-Light;
     color: $black;
-    font-size: 16px;
+    font-size: rem(16px);
     line-height: 1.42;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -15,9 +25,10 @@ body {
 
 .container {
     margin: 0 auto;
-    width: 940px;
+    width: 100%;
+    // width: rem(940px);
     // position: relative;
-    // max-width: 95%;
+    max-width: 940px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,14 +36,26 @@ body {
     &--without-align {
         justify-content: initial;
     }
+    @include tablets {
+        width: 95%;
+    }
+    @include phones {
+        width: 95%;
+    }
 }
 
 .wrapper {
     position: relative;
     width: 100%;
-    min-width: 940px + 20px;
-    min-height: 100%;
+    // min-width: rem(940px) + rem(20px);
+    height: 100%;
     overflow: hidden;
+}
+
+.maincontent {
+    height: 100%;
+    transform: translateY(0%);
+    transition: transform 1s;
 }
 
 // tag styles reset
@@ -79,8 +102,9 @@ footer {
 }
 
 .section {
-    height: 100vh;
-    min-height: 650px;
+    height: 100%;
+    // height: 100vh;
+    // height: rem(650px);
     &_centered {
         display: flex;
         flex-direction: column;
@@ -89,10 +113,10 @@ footer {
 }
 
 .section-title {
-    font-size: 72px;
+    font-size: rem(72px);
     // @include gagalin();
     color: $yellow;
-    margin-bottom: 40px;
+    margin-bottom: rem(40px);
     &_color {
         &_black {
             color: $black;
