--- a/css/blocks/burgers.scss
+++ b/css/blocks/burgers.scss
@@ -1,20 +1,67 @@
 .burgers {
     background: linear-gradient(180deg, rgb(249, 180, 59) 0%, rgb(235, 140, 56) 48%, rgb(249, 180, 59) 74%);
+    position: relative;
 }
 
-.container__burgers {
+// _____ Slider _____
+.slider {
+    // right: 0px;
+    &__container {
+        height: 100%;
+        display: flex;
+        position: relative;
+    }
+}
+
+#slider {
+    right: 0;
+}
+
+.burgers__slider {
+    width: rem(940px);
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.burgers__items {
+    position: relative;
+    display: flex;
+}
+
+.burgers__item {
+    min-width: rem(940px);
+    display: flex;
+    align-items: center;
     position: relative;
 }
 
 .burgers__block {
+    width: 100%;
     display: flex;
-    align-items: center;
+}
+
+.burgers__img {
+    width: 50%;
+    img {
+        width: 100%;
+    }
+}
+
+.burgers__desc {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .burgers__desc-text {
-    font-size: 14px;
+    font-size: rem(14px);
     color: white;
-    margin-bottom: 37px;
+    margin-bottom: rem(37px);
 }
 
 .burgers__desc-price {
@@ -24,14 +71,43 @@
 
 .price__cost {
     font-family: Gagalin-Regular, sans-serif;
-    font-size: 72px;
+    font-size: rem(72px);
     color: $red;
     line-height: .9;
-    margin-right: 30px;
+    margin-right: rem(30px);
     display: flex;
     align-items: flex-end;
     p {
-        font-size: 30px;
-        margin-left: 10px;
+        font-size: rem(30px);
+        margin-left: rem(10px);
+    }
+}
+
+.slider__container {
+    display: flex;
+}
+
+// _____ Arow _____
+.arrow__svg {
+    display: block;
+    width: rem(30px);
+    height: rem(15px);
+    fill: #fff;
+}
+
+.slider__arow {
+    position: absolute;
+    top: 50%;
+    z-index: 1000;
+    cursor: pointer;
+    &.left {
+        left: 5%;
+        // transform: translate(-50%, 0);
+        transform: rotate(90deg);
+    }
+    &.right {
+        right: 5%;
+        // transform: translate(-50%, 0);
+        transform: rotate(-90deg);
     }
 }
