--- a/css/blocks/cal.scss
+++ b/css/blocks/cal.scss
@@ -1,6 +1,8 @@
 .cal__block {
-    width: 60px;
-    height: 80px;
+    position: absolute;
+    bottom: 30px;
+    width: rem(60px);
+    height: rem(80px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,8 +10,8 @@
 }
 
 .cal__icon {
-    width: 60px;
-    height: 60px;
+    width: rem(60px);
+    height: rem(60px);
     position: relative;
     background: url('/img/icons/kkal.svg') center center / cover no-repeat;
 }
@@ -17,7 +19,7 @@
 .cal__icon-text {
     color: white;
     line-height: .8;
-    font-size: 20px;
+    font-size: rem(20px);
     position: absolute;
     top: 65%;
     left: 52%;
@@ -27,6 +29,6 @@
 
 .cal__text {
     color: white;
-    font-size: 14px;
+    font-size: rem(14px);
     font-family: Gagalin-Regular, sans-serif;
 }
