--- a/css/blocks/delivery.scss
+++ b/css/blocks/delivery.scss
@@ -1,3 +1,4 @@
-.delivery {    
-    background: url('../img/bg/delivery_bg.jpg') center center / cover no-repeat ;
+.delivery {
+    position: relative;
+    background: url('../img/bg/delivery_bg.jpg') center center / cover no-repeat;
 }
