--- a/css/blocks/footer.scss
+++ b/css/blocks/footer.scss
@@ -1,80 +1,88 @@
-                    .footer {
-                        padding: 5px 0;
-                        min-height: 60px;
-                        background: url('/img/bg/footer_bg.jpg')center center / cover no-repeat;
-                    }
-                    
-                    .container--footer {
-                        font-family: Ubuntu-light;
-                        font-size: 14px;
-                        font-weight: bold;
-                        color: white;
-                        display: flex;
-                        flex-direction: row;
-                        align-items: center;
-                        justify-content: space-between;
-                    }
-                    
-                    .footer__adres {
-                        font-style: normal;
-                        margin-bottom: 10px;
-                    }
-                    
-                    .footer__phone {
-                        text-decoration: none;
-                        color: $red;
-                        display: block;
-                        &:before {
-                            content: "";
-                            display: inline-block;
-                            vertical-align: middle;
-                            width: 13px;
-                            height: 13px;
-                            background: url('/img/icons/phone.svg') no-repeat;
-                        }
-                    }
-                    
-                    // _____ social _____
-                    .social__list {
-                        display: flex;
-                        align-items: center;
-                    }
-                    
-                    .social__item {
-                        margin-right: 20px;
-                        &:last-child {
-                            margin-right: initial;
-                        }
-                        // display: block;
-                        // width: 20px;
-                        // height: 20px;
-                    }
-                    
-                    .social__link {
-                        display: block;
-                        width: 24px;
-                        height: 13px;
-                        background: url('/img/icons/vk.svg') center center / cover;
-                        background-repeat: no-repeat;
-                    }
-                    
-                    .fb {
-                        width: 20px;
-                        height: 20px;
-                        background: url('/img/icons/fb.svg') center center / cover;
-                        background-repeat: no-repeat;
-                    }
-                    
-                    .inst {
-                        width: 20px;
-                        height: 20px;
-                        background: url('/img/icons/inst.svg') center center / cover;
-                        background-repeat: no-repeat;
-                    }
-                    
-                    .twit {
-                        width: 20px;
-                        height: 17px;
-                        background: url('/img/icons/twitter.svg') center center / cover;
-                        background-repeat: no-repeat;
-                    }
+.footer {
+    padding: rem(5px) 0;
+    min-height: rem(60px);
+    background: url('../../img/bg/footer_bg.jpg')center center / cover no-repeat;
+}
+
+.container--footer {
+    font-family: Ubuntu-light;
+    font-size: rem(14px);
+    font-weight: bold;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer__adres {
+    font-style: normal;
+    margin-bottom: rem(10px);
+}
+
+.footer__phone {
+    text-decoration: none;
+    color: $red;
+    display: block;
+    &:before {
+        content: "";
+        display: inline-block;
+        vertical-align: middle;
+        width: rem(13px);
+        height: rem(13px);
+        background: url('/img/icons/phone.svg') no-repeat;
+    }
+}
+
+// _____ social _____
+.social__list {
+    display: flex;
+    align-items: center;
+}
+
+.social__item {
+    margin-right: rem(20px);
+    &:last-child {
+        margin-right: initial;
+    }
+}
+
+.vk {
+    width: rem(24px);
+    height: rem(13px);
+    fill: white;
+    transition: .6s;
+    &:hover {
+        fill: #5a5a5a;
+    }
+}
+
+.fb {
+    width: rem(20px);
+    height: rem(20px);
+    fill: white;
+    transition: .6s;
+    &:hover {
+        fill: #5a5a5a;
+    }
+}
+
+.inst {
+    width: rem(20px);
+    height: rem(20px);
+    fill: white;
+    transition: .6s;
+    &:hover {
+        fill: #5a5a5a;
+    }
+}
+
+.twit {
+    width: rem(20px);
+    height: rem(17px);
+    fill: white;
+    transition: .6s;
+    &:hover {
+        fill: #5a5a5a;
+    }
+}
