--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -2,32 +2,66 @@
     color: #fff;
     display: flex;
     justify-content: space-between;
-    font-size: 14px;
+    font-size: rem(14px);
+    padding: 0 5%;
+    @include tablets {
+        padding: 0 20%;
+        flex-direction: column;
+        align-items: center;
+    }
+    @include phones {
+        padding: 0 5%;
+    }
+}
+
+.form__title {
+    text-align: center;
 }
 
 .form__block-row {
     width: 50%;
+    @include tablets {
+        width: 100%;
+    }
+    &.left {
+        margin-right: 20px;
+        @include tablets {
+            margin-right: 0;
+        }
+    }
 }
 
 .form__row {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: rem(20px);
+    &.radio,
+    &.checkbox,
+    &.button {
+        @include phones {
+            text-align: center;
+            display: flex;
+            justify-content: center;
+        }
+    }
 }
 
 .form__block {
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
+    &:last-child {
+        margin-right: 0;
+    }
     &-title {
-        margin-bottom: 6px;
+        margin-bottom: rem(6px);
     }
 }
 
 .form__input,
 .form__block-textarea {
     width: 100%;
-    border-radius: 10px;
-    padding: 8px 18px;
-    border: solid 2px #fff;
+    border-radius: rem(10px);
+    padding: rem(8px) rem(18px);
+    border: solid rem(2px) #fff;
     &:focus {
         outline: none;
         border-color: $yellow;
@@ -36,7 +70,7 @@
 
 .form__block-textarea {
     flex: 1;
-    min-height: 110px;
+    min-height: rem(110px);
     resize: vertical;
 }
 
@@ -44,7 +78,7 @@
 .form__radio {
     display: flex;
     align-items: center;
-    margin-right: 20px;
+    margin-right: rem(20px);
     &:last-child {
         margin-right: 0;
     }
@@ -55,17 +89,17 @@
 }
 
 .radio__input-fake {
-    width: 15px;
-    height: 15px;
+    width: rem(15px);
+    height: rem(15px);
     border-radius: 50%;
     background-color: white;
-    margin-right: 10px;
+    margin-right: rem(10px);
     position: relative;
     &::after {
         content: "";
         display: block;
-        width: 7px;
-        height: 7px;
+        width: rem(7px);
+        height: rem(7px);
         border-radius: 50%;
         background-color: $orange;
         position: absolute;
@@ -90,15 +124,15 @@
 }
 
 .form__checkbox-fake {
-    width: 15px;
-    height: 15px;
+    width: rem(15px);
+    height: rem(15px);
     background-color: white;
     position: relative;
-    margin-right: 10px;
+    margin-right: rem(10px);
     &::after {
         content: "";
-        width: 13px;
-        height: 13px;
+        width: rem(13px);
+        height: rem(13px);
         display: block;
         position: absolute;
         top: 50%;
@@ -115,5 +149,13 @@
 
 // _____ button _____
 .form__row .btn--red {
-    margin-right: 20px;
+    margin-right: rem(20px);
+}
+
+// _____ error _____
+.error {
+    // margin: 4px;
+    // padding: 5px;
+    // background-color: white;
+    color: $orange;
 }
