--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -1,8 +1,8 @@
-.header {    
+.header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 15px;
+    padding-top: rem(15px);
 }
 
 .header__buttons {
