--- a/css/blocks/title.scss
+++ b/css/blocks/title.scss
@@ -1,17 +1,21 @@
 .title {
     font-family: Gagalin-Regular, sans-serif;
     color: $yellow;
-    font-size: 72px;
-    margin-bottom: 20px;
-    text-align: center;
+    font-size: rem(72px);
+    margin-bottom: rem(20px);
+    // text-align: center;
     &--color-black {
         color: $black;
+        text-align: center;
+    }
+    @include tablets {
+        text-align: center;
     }
 }
 
 .burgers__desc-title {
     color: white;
     line-height: .9;
-    text-align: left;
-    margin-bottom: 35px;
+    // text-align: center;
+    margin-bottom: rem(35px);
 }
